# shared-cpp-py

./: .gitignore  CMakeLists.txt  README.md
py/: child.py
src/: main.cpp
