cmake_minimum_required(VERSION 3.10)

project(SharedMemoryLove VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(${PROJECT_SOURCE_DIR}/include)

add_executable(SharedMemoryLove
    src/main.cpp
)

if(MSVC)
    target_compile_options(SharedMemoryLove PRIVATE /W4)
endif()
